--- a/pages/authentication/signup.html
+++ b/pages/authentication/signup.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Colorlib</title>
-
+    <title>Đăng kí tài khoản</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- Font Icon -->
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
     <style>
         /* Reset default styles */
         * {
@@ -95,28 +95,6 @@
 
         .form-group input::placeholder {
             color: #999;
-        }
-
-        /* Checkbox */
-        .form-group .agree-term {
-            margin-right: 10px;
-            vertical-align: middle;
-        }
-
-        .form-group .label-agree-term {
-            font-size: 14px;
-            color: #666;
-        }
-
-        .form-group .term-service {
-            color: #007bff;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .form-group .term-service:hover {
-            color: #0056b3;
-            text-decoration: underline;
         }
 
         /* Submit button */
@@ -206,23 +184,23 @@
                         <form class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name" />
+                                <input type="text" name="name" id="name" placeholder="Your Name" required />
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Your Email" />
+                                <input type="email" name="email" id="email" placeholder="Your Email" required />
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="Password" />
+                                <input type="password" name="pass" id="pass" placeholder="Password" required />
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
+                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"
+                                    required />
                             </div>
                             <div class="form-group form-button">
-                                <input type="submit" name="signup" id="signup" class="form-submit" value="Register"
-                                    onclick="register()" />
+                                <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
                             </div>
                         </form>
                     </div>
@@ -238,36 +216,89 @@
         </section>
     </div>
 
-
+    <!-- Phần HTML giữ nguyên, chỉ sửa phần script -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-        const ROOT_API = 'http://103.179.185.149:8080'
-        // function register(){
-        //     $('#name').val(),
-        //     $('#email').val(),
-        //     $('#name').val(),
-        //     $('#name').val(),
-        // }
+        const ROOT_API = 'http://103.179.185.149:8080';  // Đổi lại thành API của bạn
 
-        axios.get(`${ROOT_API}/api/Authentication/register`)
-            .then(response => {
-                const data = response.data;
-                console.log(response.data)
-                // let data = respone.data;
-                let html = '';
-                let number = 1;
-                response.data.forEach(element => {
-                    html += `<span onclick=selectedQuestion(${JSON.stringify(element)})>${number}</span>`
-                    number++;
-                });
-                $('#questions').html(html)
-
-                console.log(response.data);
-            })
-            .catch(error => {
-                console.error('Error:', error);
+        $(document).ready(function () {
+            $('#register-form').submit(function (event) {
+                event.preventDefault();
+                signup();
             });
+        });
 
+        function validatePassword(password) {
+            // Kiểm tra độ dài tối thiểu 6 ký tự
+            if (password.length < 6) {
+                return "Mật khẩu phải có ít nhất 6 ký tự!";
+            }
+
+            // Kiểm tra có ký tự không phải chữ và số
+            if (!/[^a-zA-Z0-9]/.test(password)) {
+                return "Mật khẩu phải có ít nhất một ký tự đặc biệt!";
+            }
+
+            // Kiểm tra chữ cái thường
+            if (!/[a-z]/.test(password)) {
+                return "Mật khẩu phải có ít nhất một chữ cái thường (a-z)!";
+            }
+
+            // Kiểm tra chữ cái in hoa
+            if (!/[A-Z]/.test(password)) {
+                return "Mật khẩu phải có ít nhất một chữ cái in hoa (A-Z)!";
+            }
+
+            return null; // Không có lỗi
+        }
+
+        function signup() {
+            const name = document.getElementById("name").value;
+            const email = document.getElementById("email").value;
+            const pass = document.getElementById("pass").value;
+            const re_pass = document.getElementById("re_pass").value;
+
+            // Kiểm tra mật khẩu có khớp không
+            if (pass !== re_pass) {
+                alert("Mật khẩu không khớp!");
+                return;
+            }
+
+            // Validate password
+            const passwordError = validatePassword(pass);
+            if (passwordError) {
+                alert(passwordError);
+                return;
+            }
+
+            const data = {
+                fullName: name,
+                email: email,
+                password: pass
+            };
+
+            $.ajax({
+                url: `${ROOT_API}/api/Authentication/register`,
+                method: 'POST',
+                contentType: "application/json",
+                data: JSON.stringify(data),
+                success: function (response) {
+                    alert("Đăng ký thành công!");
+                    window.location.href = "login.html";
+                },
+                error: function (xhr, status, error) {
+                    try {
+                        const errorResponse = JSON.parse(xhr.responseText);
+                        alert(`Đăng ký thất bại: ${errorResponse.message}`);
+                    } catch (e) {
+                        alert('Đăng ký thất bại: ' + xhr.responseText);
+                    }
+                    console.log(status, error);
+                }
+            });
+        }
     </script>
+
 </body>
 
 </html>
